# Yigthinker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TODOS.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: tests.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: DESIGN.md
docs/adr/: 001-why-we-dont-do-pgec.md  002-intent-routing.md  003-harness-philosophy.md  004-governance-as-pluggable-sidecar.md  005-memory-provider-interface.md  006-workflow-templating.md  007-plugin-and-skill-distribution.md  008-persona-as-data.md  README.md  _template.md
docs/audit/: 2026-04-17-phase-1a-acceptance.md  2026-04-17-phase-1b-acceptance.md  2026-04-skill-pptx-audit.md
scripts/: bot-update.json  check_adr_format.py  check_presence_boundaries.py  pypi_publish_helper.py  run_all_tests.py
scripts/teams-app/: manifest.json
tests/: conftest.py  test_agent.py  test_agent_base_prompt.py  test_agent_core.py  test_agent_definitional_reply.py  test_agent_injection_guard.py  test_agent_memory.py  test_agent_thinking.py  test_builder_memory.py  test_cli_main.py  test_context_manager.py  test_e2e_pnl_simulation.py  test_e2e_simulation.py  test_e2e_teams_excel.py  test_file_undo.py  test_gates.py  test_integration.py  test_integration_improvements.py  test_permissions.py  test_persistence.py  test_presets.py  test_session.py  test_session_checkpoint.py  test_session_quoting.py  test_session_steering.py  test_session_var_memory.py  test_settings.py  test_stats.py  test_types.py
tests/test_advisor/: test_advisor.py
tests/test_agent/: test_dry_run.py  test_idle_watchdog.py  test_reflexion.py  test_token_continuation.py  test_tool_result_raw_content_preservation.py
tests/test_channels/: test_artifact_guard.py  test_artifacts.py  test_channel_base.py  test_command_parser.py  test_feishu_adapter.py  test_feishu_cards.py  test_feishu_quote_extraction.py  test_feishu_send_response.py  test_feishu_structured_cards.py  test_gchat_adapter.py  test_teams_adapter.py  test_teams_auth.py  test_teams_cards.py  test_teams_file_upload.py  test_teams_gateway_base_url.py  test_teams_hmac.py  test_teams_markdown_table_strip.py  test_teams_quote_extraction.py  test_teams_structured_cards.py
tests/test_cli/: test_ask_prompt.py  test_commands.py  test_dashboard_command.py  test_installer.py  test_repl.py  test_resume.py  test_runtime_commands.py
tests/test_commands/: test_finance_commands.py
tests/test_core/: test_presence_protocol.py
tests/test_dashboard/: test_layout.py  test_sample_db.py  test_server.py  test_websocket_push.py
tests/test_gateway/: test_artifacts_cleanup.py  test_auth.py  test_chart_endpoint.py  test_dashboard_serve.py  test_dedup.py  test_file_tokens.py  test_hibernation.py  test_origin_validation.py  test_protocol.py  test_rpa_controller.py  test_rpa_endpoints.py  test_rpa_state.py  test_server.py  test_session_key.py  test_session_registry.py  test_session_removal_callbacks.py  test_subagent_events.py
tests/test_hooks/: test_aggregate.py  test_executor.py  test_leak_detection.py  test_registry.py
tests/test_mcp/: test_client.py  test_client_patches.py  test_loader.py  test_resource_tools.py
tests/test_memory/: test_agent_profile.py  test_auto_dream.py  test_compact.py  test_file_provider.py  test_finance_pattern_seeds.py  test_ltm_schema.py  test_patterns.py  test_provider_contract.py  test_session_memory.py
tests/test_plugins/: test_command.py  test_hook_command.py  test_loader.py
tests/test_prompts/: test_base.py
tests/test_providers/: test_azure.py  test_claude.py  test_ollama.py  test_openai.py  test_provider_factory.py  test_streaming.py
tests/test_scripts/: test_check_adr_format.py  test_check_presence_boundaries.py
tests/test_sdk/: test_query.py  test_session.py
tests/test_security/: test_cso_regression_20260407.py
tests/test_speculation/: test_engine.py
tests/test_subagent/: test_agent_types.py  test_dataframe_sharing.py  test_engine.py  test_isolation_patches.py  test_lifecycle.py  test_tool_access.py  test_transcript.py
tests/test_tools/: conftest.py  test_agent_cancel.py  test_agent_status.py  test_artifact_write.py  test_chart_create.py  test_chart_create_heatmap.py  test_chart_create_waterfall.py  test_chart_modify.py  test_chart_recommend.py  test_dashboard_push.py  test_df_load.py  test_df_load_regression_001.py  test_df_merge.py  test_df_profile.py  test_df_transform.py  test_df_transform_multivars.py  test_df_transform_regression_001.py  test_df_transform_sandbox.py  test_df_transform_timeout.py  test_excel_write.py  test_excel_write_embed_chart.py  test_explore_anomaly.py  test_explore_drilldown.py  test_explore_overview.py  test_finance_analyze.py  test_finance_budget.py  test_finance_calculate.py  test_finance_validate.py  test_finance_workflow_templates.py  test_forecast_evaluate.py  test_forecast_regression.py  test_forecast_timeseries.py  test_mcp_detection.py  test_registry.py  test_registry_factory.py  test_registry_factory_phase3.py  test_report_docx.py  test_report_generate.py  test_report_generate_pptx.py  test_report_generate_undo.py  (+19 more)
tests/test_tui/: test_app.py  test_widgets.py  test_ws_client.py
tests/test_visualization/: test_exporter.py  test_vchart.py
tests/test_voice/: test_keyterms.py  test_providers.py
yigthinker/: __main__.py  agent.py  builder.py  context_manager.py  gates.py  install_hints.py  permissions.py  persistence.py  registry_factory.py  sample_db.py  session.py  settings.py  stats.py  types.py
yigthinker/advisor/: advisor.py  prompts.py
yigthinker/channels/: __init__.py  artifacts.py  base.py  renderer.py
yigthinker/cli/: ask_prompt.py  commands.py  installer.py  repl.py  setup_wizard.py
yigthinker/commands/: advisor.md  ref.md  stats.md  voice.md
yigthinker/core/: __init__.py  agent.py  builder.py  connection.py  presence.py  providers.py  session.py  workflow.py
yigthinker/dashboard/: layout.py  sample_db.py  server.py  websocket_client.py
(+276 files in other folders)
