[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yigthinker"
version = "0.1.0"
description = "AI-powered financial and data analysis agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]
forecast = [
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
]
dashboard = [
    "fastapi>=0.111.0",
    "dash>=2.17.0",
    "plotly>=5.22.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
yigthinker = "yigthinker.__main__:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
