[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yigthinker"
version = "0.2.0.dev0"
description = "AI-powered financial and data analysis agent — headless, CLI/TUI/IM-accessible, with workflow automation and RPA bridges"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Henghenggao" },
]
keywords = [
    "ai-agent", "llm", "finance", "data-analysis", "pandas",
    "workflow-automation", "rpa", "mcp", "anthropic", "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "filelock>=3.12.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "pyyaml>=6.0",
    "plotly>=5.22.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "croniter>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "fastapi>=0.111.0",
    "lark-oapi>=1.3.0",
    "plotly>=5.22.0",
    "kaleido>=1.0.0",
    "python-docx>=1.1.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "pyarrow>=15.0.0",
    "textual>=0.80.0",
    "aiofiles>=23.0",
]
forecast = [
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
]
gateway = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "pyarrow>=15.0.0",
    "aiofiles>=23.0",
    "httpx>=0.27.0",
]
tui = [
    "textual>=0.80.0",
    "websockets>=12.0",
]
feishu = ["lark-oapi>=1.3.0"]
teams = [
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "PyJWT[crypto]>=2.9.0",
]
gchat = [
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
]
workflow = [
    # jinja2 and croniter are now core dependencies.
    # This extra is kept for backwards compatibility.
]
visualization = [
    "kaleido>=1.0.0",
    "python-docx>=1.1.0",
]
pptx = ["python-pptx>=1.0"]
rpa-uipath = [
    "yigthinker-mcp-uipath",
]
rpa-pa = [
    "yigthinker-mcp-powerautomate",
]
all-channels = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "pyarrow>=15.0.0",
    "kaleido>=1.0.0",
    "python-docx>=1.1.0",
    "lark-oapi>=1.3.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "PyJWT[crypto]>=2.9.0",
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
]

[project.urls]
Homepage = "https://github.com/Henghenggao/Yigthinker"
Repository = "https://github.com/Henghenggao/Yigthinker"
Issues = "https://github.com/Henghenggao/Yigthinker/issues"
Changelog = "https://github.com/Henghenggao/Yigthinker/blob/master/CHANGELOG.md"

[project.scripts]
yigthinker = "yigthinker.__main__:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that may take >5 seconds or hang on CI (skip with -m 'not slow')",
]
addopts = "-m 'not slow'"
# Narrow test-only filters for known third-party noise:
# `lark-oapi` still references deprecated `websockets` aliases / legacy APIs
# under websockets>=14. We keep the warnings visible outside pytest so the
# dependency issue remains discoverable in development/runtime contexts.
filterwarnings = [
    "ignore::DeprecationWarning:lark_oapi\\.ws\\.client",
    "ignore::DeprecationWarning:websockets\\.legacy",
]
# Hard per-test wall-clock limit so a single hung test cannot burn the CI slot.
# Uses the ``thread`` method so it works on Windows (signal.SIGALRM is POSIX-only).
timeout = 60
timeout_method = "thread"
